# chip-in-inventory

./: Cargo.toml  Dockerfile  GETTING_STARTED.md  README.md  docker-compose.yml
.github/workflows/: release.yml
scripts/: apply_config.sh
src/: config.rs  main.rs  main.rs.rej  models.rs  repository.rs
